# AnimRay

./: .gitignore  .gitmodules  .travis.CMakeLists.txt  .travis.yml  CMakeLists.txt  README.markdown  README.md  README.txt  animray.sln  animray.vcproj  build  build.cmd  compile  config-builds  do-build  requirements.cmake  requirements.jam
.circleci/: config.yml
animray/: CMakeLists.txt  ChangeLog  Jamroot  animray.vcproj  compile  compile.cmd
animray/Cpp/: CMakeLists.txt
animray/Cpp/animray/: CMakeLists.txt  Jamfile  animray.cpp
animray/Cpp/animray-base/: Jamfile  animray-base.hpp  homogeneous-tests.cpp  line-tests.cpp  matrix-tests.cpp  sphere-tests.cpp
animray/Cpp/animray-chatr/: Jamfile  animray-chatr.cpp  mandelbrot.cpp
animray/Cpp/animray-py/: Jamfile  animray-py.cpp  film-test.py  film.hpp  load-test.py  mandelbrot-test.py  mandelbrot.hpp
animray/Cpp/animray-test/: CMakeLists.txt  Jamfile  animation-animate-tests.cpp  animation-procedural-tests.cpp  camera-movie-tests.cpp  colour-hls-tests.cpp  extents2d-tests.cpp  factors-tests.cpp  film-tests.cpp  geometry-triangle-tests.cpp  hls-tests.cpp  homogeneous-tests.cpp  interpolation-linear-tests.cpp  line-tests.cpp  mandelbrot-tests.cpp  maths-cross-tests.cpp  maths-matrix-tests.cpp  maths-prime-tests.cpp  matrix-tests.cpp  mixins-tests.cpp  plane-tests.cpp  point2d-tests.cpp  point3d-tests.cpp  raster-tests.cpp  ray-tests.cpp  render-tests.cpp  rgb-tests.cpp  rgba-tests.cpp  sphere-tests.cpp  surface-tests.cpp  test-json.hpp  texture-tests.cpp  unit-vector-tests.cpp
animray/Cpp/ar-view/: Jamfile  ar-view.cpp
animray/Docs/: Jamfile  index.hpp
animray/Examples/landmaker/: landmaker.cpp
animray/Examples/mandelbrot/: anim.py  mandelbrot.cpp  mandelbrot.py
animray/Python/: Jamfile
animray/Python/animray/: __init__.py
animray/Scenes/early/: CMakeLists.txt  Jamfile  affine-transformations.cpp  coloured-matte-surfaces.cpp  five-spheres-coloured-lights.cpp  reflections.cpp  simple-specular-highlight.cpp  spheres-animated.cpp  spheres-positionable-over-plane.cpp  spheres-positionable-surface-collection.cpp  spheres-positionable.cpp  spheres-white.cpp  spheres.cpp  tetrahedron.cpp  white-plane-ortho.cpp  white-sphere-ortho.cpp  white-sphere.cpp  white-triangle-ortho.cpp
animray/include/animray/: affine.hpp  compound.hpp  emission.hpp  epsilon.hpp  extents2d.hpp  film.hpp  line.hpp  mandelbrot.hpp  matrix.hpp  movable.hpp  panel.hpp  point2d.hpp  point3d.hpp  ray.hpp  scene.hpp  shader.hpp  surface.hpp  targa.hpp  test.hpp  texture.hpp  unit-vector.hpp
animray/scenes/: CMakeLists.txt
animray/scenes/early/: CMakeLists.txt  affine-transformations.cpp  coloured-matte-surfaces.cpp  five-spheres-coloured-lights.cpp  reflections.cpp  simple-specular-highlight.cpp  spheres-animated.cpp  spheres-positionable-over-plane.cpp  spheres-positionable-surface-collection.cpp  spheres-positionable.cpp  spheres-white.cpp  spheres.cpp  tetrahedron.cpp  white-plane-ortho.cpp  white-sphere-ortho.cpp  white-sphere.cpp  white-triangle-ortho.cpp
animray/scenes/other/: CMakeLists.txt
animray/tests/: animation-procedural-tests.cpp  camera-movie-tests.cpp  colour-hls-tests.cpp  colour-hsl-tests.cpp  colour-rgb-tests.cpp  colour-rgba-tests.cpp  extents2d-tests.cpp  film-tests.cpp  functional-callable-tests.cpp  geometry-plane-tests.cpp  geometry-sphere-tests.cpp  geometry-triangle-tests.cpp  line-tests.cpp  maths-cross-tests.cpp  maths-matrix-tests.cpp  maths-prime-tests.cpp  mixins-tests.cpp  point2d-tests.cpp  point3d-tests.cpp  ray-tests.cpp  surface-tests.cpp  test-json.hpp  texture-tests.cpp  unit-vector-tests.cpp
include/animray/: compound.hpp  epsilon.hpp  extents2d.hpp  film.hpp  line.hpp  mandelbrot.hpp  matrix.hpp  movable.hpp  narrow.hpp  numeric.hpp  point2d.hpp  point3d.hpp  ray.hpp  scene.hpp  surface.hpp  targa.hpp  test.hpp  texture.hpp  unit-vector.hpp
include/animray/animation/: animate.hpp
include/animray/camera/: flat-jitter.hpp  flat.hpp  movie.hpp  ortho.hpp  pinhole.hpp
include/animray/cli/: main.hpp  progress.hpp
include/animray/color/: concept.hpp  hsl.hpp  luma.hpp  rgb.hpp  rgba.hpp  srgb.hpp  yuv.hpp
include/animray/detail/: array_based.hpp  texture-policy.hpp
include/animray/formats/: targa.hpp
include/animray/functional/: callable.hpp  reduce.hpp  traits.hpp  zip.hpp
include/animray/geometry/: collection-surface.hpp  collection.hpp
include/animray/interpolation/: linear.hpp
include/animray/light/: collection.hpp  light.hpp
include/animray/maths/: angles.hpp  cross.hpp  dot.hpp  primes.hpp  quadratic.hpp
include/animray/mixins/: depth-count.hpp  frame.hpp  mixin.hpp  time.hpp
include/animray/surface/: gloss.hpp  matte.hpp  reflective.hpp  transparent.hpp
include/animray/threading/: sub-panel.hpp
scenes/: CMakeLists.txt
scenes/colour/: CMakeLists.txt  mix.cpp  triangle.cpp
scenes/early/: CMakeLists.txt  affine-transformations.cpp  coloured-matte-surfaces.cpp  cube.cpp  five-spheres-coloured-lights.cpp  reflections.cpp  rhombic-dodecahedron.cpp  simple-specular-highlight.cpp  spheres-animated.cpp  spheres-positionable-over-plane.cpp  spheres-positionable-surface-collection.cpp  spheres-positionable.cpp  spheres-white.cpp  spheres.cpp  tetrahedron.cpp  white-plane-ortho.cpp  white-sphere-ortho.cpp  white-sphere.cpp  white-triangle-ortho.cpp
scenes/other/landmaker/: CMakeLists.txt  landmaker.cpp
scenes/other/mandelbrot/: CMakeLists.txt  mandelbrot.cpp
tests/: CMakeLists.txt  animation-animate-tests.cpp  animation-procedural-tests.cpp  camera-movie-tests.cpp  colour-hsl-tests.cpp  colour-rgb-tests.cpp  colour-rgba-tests.cpp  extents2d-tests.cpp  film-tests.cpp  functional-callable-tests.cpp  geometry-plane-tests.cpp  geometry-sphere-tests.cpp  geometry-triangle-tests.cpp  interpolation-linear-tests.cpp  line-tests.cpp  maths-cross-tests.cpp  maths-matrix-tests.cpp  maths-prime-tests.cpp  mixins-tests.cpp  numeric.tests.cpp  point2d-tests.cpp  point3d-tests.cpp  ray-tests.cpp  surface-tests.cpp  texture-tests.cpp  unit-vector-tests.cpp
(+145 files in other folders)
