function(scene name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} animray fost-cli)
    install(TARGETS ${name} EXPORT ${name} RUNTIME DESTINATION bin)
    if(TARGET check)
        add_custom_command(TARGET ${name} POST_BUILD COMMAND ${name})
        add_dependencies(check ${name})
        add_test(NAME ${name} COMMAND ${name})
    endif()
endfunction()

scene(mix)
