set(scenes-early)
macro(scene  name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} animray fost-cli)
    install(TARGETS ${name} EXPORT ${name} RUNTIME DESTINATION bin)
    if(TARGET check)
        add_custom_command(OUTPUT test-${name} COMMAND ${name} -b false)
        list(APPEND scenes-early test-${name})
    endif()
endmacro()

scene(affine-transformations)
scene(coloured-matte-surfaces)
scene(five-spheres-coloured-lights)
scene(reflections)
scene(simple-specular-highlight)
scene(spheres-animated)
scene(spheres)
scene(spheres-positionable)
scene(spheres-positionable-over-plane)
scene(spheres-positionable-surface-collection)
scene(spheres-white)
scene(tetrahedron)
scene(white-plane-ortho)
scene(white-sphere)
scene(white-sphere-ortho)
scene(white-triangle-ortho)

if(TARGET check)
    add_custom_target(scenes-early DEPENDS ${scenes-early})
    add_dependencies(check scenes-early)
endif()
