set(scenes-early)
macro(scene  name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} animray fost-cli)
    install(TARGETS ${name} EXPORT ${name} RUNTIME DESTINATION bin)
    if(TARGET check)
        set(test-target test-${name}${ARGV1}.tga)
        add_custom_command(OUTPUT ${test-target} COMMAND ${name} -b false test-${name}.tga)
        list(APPEND scenes-early ${test-target})
    endif()
endmacro()

scene(affine-transformations)
scene(cube ".0")
scene(coloured-matte-surfaces)
scene(five-spheres-coloured-lights)
scene(reflections)
scene(simple-specular-highlight)
scene(spheres-animated ".0")
scene(spheres)
scene(spheres-positionable)
scene(spheres-white)
scene(tetrahedron ".0")
scene(white-plane-ortho)
scene(white-sphere)
scene(white-sphere-ortho)
scene(white-triangle-ortho)

if(TARGET check)
    add_custom_target(scenes-early DEPENDS ${scenes-early})
    add_dependencies(check scenes-early)
endif()
