function(scene  name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} animray fost-cli)
    install(TARGETS ${name} EXPORT ${name} RUNTIME DESTINATION bin)
    add_custom_command(TARGET ${name} POST_BUILD COMMAND ${name})
endfunction()

scene(affine-transformations)
scene(coloured-matte-surfaces)
scene(five-spheres-coloured-lights)
scene(reflections)
scene(simple-specular-highlight)
scene(spheres-animated)
scene(spheres)
scene(spheres-positionable)
scene(spheres-positionable-over-plane)
scene(spheres-positionable-surface-collection)
scene(spheres-white)
scene(tetrahedron)
scene(white-plane-ortho)
scene(white-sphere)
scene(white-sphere-ortho)
scene(white-triangle-ortho)
